@@ -1,6 +1,6 @@
 
 /*
- * $Id: store.cc,v 1.384 1998/02/21 00:57:02 rousskov Exp $
+ * $Id: store.cc,v 1.385 1998/02/21 18:46:39 rousskov Exp $
  *
  * DEBUG: section 20    Storeage Manager
  * AUTHOR: Harvest Derived
@@ -201,6 +201,7 @@ static void
 destroy_MemObject(StoreEntry * e)
 {
     MemObject *mem = e->mem_obj;
+    const Ctx ctx = ctx_enter(mem->url);
     debug(20, 3) ("destroy_MemObject: destroying %p\n", mem);
     assert(mem->swapout.fd == -1);
     destroy_MemObjectData(mem);
@@ -216,6 +217,7 @@ destroy_MemObject(StoreEntry * e)
     requestUnlink(mem->request);
     mem->request = NULL;
     memFree(MEM_MEMOBJECT, mem);
+    ctx_exit(ctx);
 }
 
 static void
